# docuquery-backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/auth/: dependencies.py  router.py  service.py
app/chunking/: llm_chunker.py  schemas.py  semantic.py
app/documents/: router.py  schemas.py  service.py
app/documents/parsers/: __init__.py  base.py  csv_parser.py  docx.py  excel.py  json_parser.py  markdown.py  pdf.py  text.py
app/embeddings/: service.py
app/qa/: router.py  schemas.py  service.py
